--- a/.github/workflows/deploy-vps.yml
+++ b/.github/workflows/deploy-vps.yml
@@ -2,115 +2,115 @@
 name: Deploy to VPS
 
 on:
-  workflow_run:
-    workflows: ["Full CI Pipeline"]
-    types: [completed]
-  workflow_dispatch:
+    workflow_run:
+        workflows: ["Full CI Pipeline"]
+        types: [completed]
+    workflow_dispatch:
 
 jobs:
-  deploy:
-    if: >
-      github.event_name == 'workflow_dispatch' ||
-      (github.event_name == 'workflow_run' &&
-       github.event.workflow_run.conclusion == 'success' &&
-       github.event.workflow_run.event == 'push' &&
-       github.event.workflow_run.head_branch == 'main')
-    runs-on: ubuntu-latest
-    environment:
-      name: production
+    deploy:
+        if: >
+            github.event_name == 'workflow_dispatch' ||
+            (github.event_name == 'workflow_run' &&
+             github.event.workflow_run.conclusion == 'success' &&
+             github.event.workflow_run.event == 'push' &&
+             github.event.workflow_run.head_branch == 'main')
+        runs-on: ubuntu-latest
+        environment:
+            name: production
 
-    steps:
-      - name: Validate required secrets
-        env:
-          VPS_HOST: ${{ secrets.VPS_HOST }}
-          VPS_USER: ${{ secrets.VPS_USER }}
-          VPS_SSH_KEY: ${{ secrets.VPS_SSH_KEY }}
-          VPS_PROJECT_DIR: ${{ secrets.VPS_PROJECT_DIR }}
-          VPS_SSH_PORT: ${{ secrets.VPS_SSH_PORT }}
-          VPS_ENV: ${{ secrets.VPS_ENV }}
-        run: |
-          set -euo pipefail
+        steps:
+            - name: Validate required secrets
+              env:
+                  VPS_HOST: ${{ secrets.VPS_HOST }}
+                  VPS_USER: ${{ secrets.VPS_USER }}
+                  VPS_SSH_KEY: ${{ secrets.VPS_SSH_KEY }}
+                  VPS_PROJECT_DIR: ${{ secrets.VPS_PROJECT_DIR }}
+                  VPS_SSH_PORT: ${{ secrets.VPS_SSH_PORT }}
+                  VPS_ENV: ${{ secrets.VPS_ENV }}
+              run: |
+                  set -euo pipefail
 
-          missing=0
-          for var in VPS_HOST VPS_USER VPS_SSH_KEY VPS_PROJECT_DIR; do
-            if [ -z "${!var:-}" ]; then
-              echo "::error title=Missing secret::${var} is not configured for this workflow."
-              missing=1
-            fi
-          done
+                  missing=0
+                  for var in VPS_HOST VPS_USER VPS_SSH_KEY VPS_PROJECT_DIR; do
+                    if [ -z "${!var:-}" ]; then
+                      echo "::error title=Missing secret::${var} is not configured for this workflow."
+                      missing=1
+                    fi
+                  done
 
-          if [ "${missing}" -ne 0 ]; then
-            echo "One or more required secrets are missing. Aborting before deployment."
-            exit 1
-          fi
+                  if [ "${missing}" -ne 0 ]; then
+                    echo "One or more required secrets are missing. Aborting before deployment."
+                    exit 1
+                  fi
 
-          echo "All required secrets are present."
+                  echo "All required secrets are present."
 
-      - name: Ensure workflow_run trigger is valid
-        if: github.event_name == 'workflow_run'
-        run: |
-          echo "Triggered by workflow_run for branch: ${{ github.event.workflow_run.head_branch }}"
+            - name: Ensure workflow_run trigger is valid
+              if: github.event_name == 'workflow_run'
+              run: |
+                  echo "Triggered by workflow_run for branch: ${{ github.event.workflow_run.head_branch }}"
 
-      - name: Deploy via SSH
-        uses: appleboy/ssh-action@v1.0.3
-        env:
-          VPS_HOST: ${{ secrets.VPS_HOST }}
-          VPS_USER: ${{ secrets.VPS_USER }}
-          VPS_SSH_KEY: ${{ secrets.VPS_SSH_KEY }}
-          VPS_SSH_PORT: ${{ secrets.VPS_SSH_PORT }}
-          VPS_PROJECT_DIR: ${{ secrets.VPS_PROJECT_DIR }}
-          VPS_ENV: ${{ secrets.VPS_ENV }}
-        with:
-          host: ${{ secrets.VPS_HOST }}
-          username: ${{ secrets.VPS_USER }}
-          key: ${{ secrets.VPS_SSH_KEY }}
-          port: ${{ env.VPS_SSH_PORT != '' && env.VPS_SSH_PORT || '22' }}
-          script_stop: true
-          envs: VPS_PROJECT_DIR,VPS_ENV
-          script: |
-            set -Eeuo pipefail
+            - name: Deploy via SSH
+              uses: appleboy/ssh-action@v1.0.3
+              env:
+                  VPS_HOST: ${{ secrets.VPS_HOST }}
+                  VPS_USER: ${{ secrets.VPS_USER }}
+                  VPS_SSH_KEY: ${{ secrets.VPS_SSH_KEY }}
+                  VPS_SSH_PORT: ${{ secrets.VPS_SSH_PORT }}
+                  VPS_PROJECT_DIR: ${{ secrets.VPS_PROJECT_DIR }}
+                  VPS_ENV: ${{ secrets.VPS_ENV }}
+              with:
+                  host: ${{ secrets.VPS_HOST }}
+                  username: ${{ secrets.VPS_USER }}
+                  key: ${{ secrets.VPS_SSH_KEY }}
+                  port: ${{ env.VPS_SSH_PORT != '' && env.VPS_SSH_PORT || '22' }}
+                  script_stop: true
+                  envs: VPS_PROJECT_DIR,VPS_ENV
+                  script: |
+                      set -Eeuo pipefail
 
-            : "${VPS_PROJECT_DIR:?VPS_PROJECT_DIR is required}"
+                      : "${VPS_PROJECT_DIR:?VPS_PROJECT_DIR is required}"
 
-            echo "Changing directory to ${VPS_PROJECT_DIR}"
-            cd "${VPS_PROJECT_DIR}"
+                      echo "Changing directory to ${VPS_PROJECT_DIR}"
+                      cd "${VPS_PROJECT_DIR}"
 
-            echo "Checking working tree status"
-            if [ -n "$(git status --porcelain)" ]; then
-              echo "Working tree has uncommitted changes. Aborting deploy."
-              exit 1
-            fi
+                      echo "Checking working tree status"
+                      if [ -n "$(git status --porcelain)" ]; then
+                        echo "Working tree has uncommitted changes. Aborting deploy."
+                        exit 1
+                      fi
 
-            echo "Fetching latest commits"
-            git fetch --prune
+                      echo "Fetching latest commits"
+                      git fetch --prune
 
-            echo "Switching to main branch"
-            git checkout main
+                      echo "Switching to main branch"
+                      git checkout main
 
-            echo "Pulling latest changes"
-            git pull --ff-only
+                      echo "Pulling latest changes"
+                      git pull --ff-only
 
-            echo "Updating containers"
-            docker compose pull
-            docker compose up -d --remove-orphans
+                      echo "Updating containers"
+                      docker compose pull
+                      docker compose -f docker-compose.yml -f docker-compose.demo.yml up -d --remove-orphans
 
-            if [ -n "${VPS_ENV:-}" ]; then
-              echo "Deployment environment flag detected."
-            fi
+                      if [ -n "${VPS_ENV:-}" ]; then
+                        echo "Deployment environment flag detected."
+                      fi
 
-            echo "$(date '+%Y-%m-%d %H:%M:%S') Deploy completed by GitHub Actions" >> deploy.log
+                      echo "$(date '+%Y-%m-%d %H:%M:%S') Deploy completed by GitHub Actions" >> deploy.log
 
-      - name: Deployment summary
-        run: |
-          echo "## 🚀 Deployment Triggered" >> $GITHUB_STEP_SUMMARY
-          if [ "${{ github.event_name }}" = "workflow_run" ]; then
-            echo "- Trigger: Full CI Pipeline (run ${{ github.event.workflow_run.id }})" >> $GITHUB_STEP_SUMMARY
-            echo "- Branch: ${{ github.event.workflow_run.head_branch }}" >> $GITHUB_STEP_SUMMARY
-            echo "- Commit: ${{ github.event.workflow_run.head_sha }}" >> $GITHUB_STEP_SUMMARY
-          else
-            echo "- Trigger: Manual workflow_dispatch" >> $GITHUB_STEP_SUMMARY
-            echo "- Actor: ${{ github.actor }}" >> $GITHUB_STEP_SUMMARY
-          fi
-          echo "- Target host: ${{ secrets.VPS_HOST }}" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "デプロイ完了。VPS 上で docker compose が更新されています。" >> $GITHUB_STEP_SUMMARY
+            - name: Deployment summary
+              run: |
+                  echo "## 🚀 Deployment Triggered" >> $GITHUB_STEP_SUMMARY
+                  if [ "${{ github.event_name }}" = "workflow_run" ]; then
+                    echo "- Trigger: Full CI Pipeline (run ${{ github.event.workflow_run.id }})" >> $GITHUB_STEP_SUMMARY
+                    echo "- Branch: ${{ github.event.workflow_run.head_branch }}" >> $GITHUB_STEP_SUMMARY
+                    echo "- Commit: ${{ github.event.workflow_run.head_sha }}" >> $GITHUB_STEP_SUMMARY
+                  else
+                    echo "- Trigger: Manual workflow_dispatch" >> $GITHUB_STEP_SUMMARY
+                    echo "- Actor: ${{ github.actor }}" >> $GITHUB_STEP_SUMMARY
+                  fi
+                  echo "- Target host: ${{ secrets.VPS_HOST }}" >> $GITHUB_STEP_SUMMARY
+                  echo "" >> $GITHUB_STEP_SUMMARY
+                  echo "デプロイ完了。VPS 上で docker compose が更新されています。" >> $GITHUB_STEP_SUMMARY
